# gnuminki

./: CMakeLists.txt  areaOfEffect.cpp  areaOfEffect.h  bar.cpp  bar.h  board.cpp  board.h  changeling.cpp  changeling.h  game.cpp  game.h  help.cpp  help.h  main.cpp  menu.h  mine.cpp  mine.h  plant.cpp  plant.h  square.h  status.cpp  status.h  win.cpp  win.h  window.cpp  window.h
